@@ -1,3 +1,7 @@
+2014-10-13  Eric Blake <eblake@redhat.com>
+
+	* cd: support drive letters on Cygwin.
+
 2014-10-08  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Split unquoted $@/$* correctly when IFS is set but empty.
